Delete player finished

--- a/client/src/PlayerTable/PlayerTable.scss
+++ b/client/src/PlayerTable/PlayerTable.scss
@@ -77,3 +77,13 @@ $header-height: 2.5rem;
     margin-right: 0.5rem;
   }
 }
+
+.delete {
+  color: red;
+  cursor: pointer;
+}
+
+.edit {
+  color: blue;
+  cursor: pointer;
+}
