--- a/client/src/Header/Header.scss
+++ b/client/src/Header/Header.scss
@@ -22,6 +22,15 @@
   }
 }
 
+.nav {
+  flex-grow: 3;
+  text-align: end;
+  cursor: pointer;
+}
+.nav:hover {
+  color: yellow;
+}
+
 .logo {
   height: 3.125rem;
   margin-left: 1rem;
